syntax = "proto3";

option csharp_namespace = "BasicGrpcService";

import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package basic_grpc_service;

service Chatbot {
  rpc SendMessage (ChatRequest) returns (ChatReply);
}

message ChatRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue message = 2;
  google.protobuf.Timestamp request_start_time = 3;
}

message ChatReply {
  google.protobuf.StringValue message = 1;
  google.protobuf.BoolValue answer_found = 2;
  google.protobuf.BytesValue reply_in_bytes = 3;
  google.protobuf.Int32Value message_size_in_bytes = 4;
  google.protobuf.DoubleValue message_size_in_megabytes = 5;
  google.protobuf.Timestamp request_received_time = 6;
  google.protobuf.Duration request_processed_duration = 7;
}