syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package response;

message ChatReply {
  google.protobuf.StringValue message = 1;
  google.protobuf.BoolValue answer_found = 2;
  google.protobuf.BytesValue reply_in_bytes = 3;
  google.protobuf.Int32Value message_size_in_bytes = 4;
  google.protobuf.DoubleValue message_size_in_megabytes = 5;
  google.protobuf.Timestamp request_received_time = 6;
  google.protobuf.Duration request_processed_duration = 7;
  google.protobuf.Any dynamic_payload = 8;
}